<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/poseEstimationModel">

        <ListPreference
            app:defaultValue="RT"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="modelType"
            app:title="@string/poseEstimationModel"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/thresholds">
        <SeekBarPreference
            android:key="confidenceThreshold"
            app:title="@string/poseEstimationConfidenceThreshold"
            app:showSeekBarValue="true"
            app:defaultValue="20" />

        <SeekBarPreference
            android:key="timeThreshold"
            app:title="@string/filteringTimeThreshold"
            app:seekBarIncrement="1"
            android:max="10"
            app:showSeekBarValue="true"
            app:defaultValue="1" />

        <SeekBarPreference
            android:key="holdPoseThreshold"
            app:title="@string/holdPoseThreshold"
            app:seekBarIncrement="1"
            android:max="10"
            app:min="1"
            app:showSeekBarValue="true"
            app:defaultValue="1" />

    </PreferenceCategory>

    <PreferenceCategory app:title="UI Elements">
        <SwitchPreferenceCompat
            app:key="showFPS"
            app:defaultValue="true"
            app:title="@string/showTimePerFrame"/>
    </PreferenceCategory>

</PreferenceScreen>