<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SessionDetailsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:text="@string/nameTextView" />

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:text="@string/durationTextView" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:text="@string/dateTextView" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:text="@string/timeTextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPoses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintBottom_toTopOf="@id/buttonDelete"
        android:scrollbars="vertical" />



    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonRename"
        android:padding="16dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonRename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/buttonDelete"
        android:text="@string/rename"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>