<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordingModeFragment">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintBottom_toTopOf="@id/layout_bottom"/>

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewFPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="8dp"
            android:text="@string/timePerFrameTextViewEmpty" />

        <TextView
            android:id="@+id/textViewPose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="8dp"
            android:text="@string/poseTextViewEmpty" />

        <TextView
            android:id="@+id/textViewPoseConfidence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="8dp"
            android:text="@string/confidenceTextViewEmpty" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ImageButton
            android:id="@+id/imageButtonSwitchCamera"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_flip_camera_ios_24" />


        <ToggleButton
            android:id="@+id/toggleButtonRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:textOff="@string/startRecording"
            android:textOn="@string/stopRecording" />


        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_settings_24" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>